--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
     branches: ["main"]
 
 jobs:
-  test:
+  ci:
+    name: CI
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -33,3 +34,5 @@ jobs:
       - name: Test
         run: npm test
 
+      - name: Build
+        run: npm run build
